[gd_scene load_steps=8 format=3 uid="uid://16iuasf15alq"]

[ext_resource type="Script" path="res://menus/options_menu.gd" id="1_iwixp"]
[ext_resource type="PackedScene" uid="uid://b88skvef3btfn" path="res://menus/controls_menu.tscn" id="2_0g7yr"]
[ext_resource type="PackedScene" uid="uid://b1jnthm2msap" path="res://menus/appearance_menu.tscn" id="2_7gb7c"]
[ext_resource type="PackedScene" uid="uid://bl2u1vwrkn7sx" path="res://worm/worm.tscn" id="3_qrlsc"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tp0d4"]
color = Color(1, 1, 1, 1)
thickness = 3

[sub_resource type="Theme" id="Theme_nq3g0"]
PopupMenu/font_sizes/font_size = 36

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ai5tv"]
color = Color(1, 1, 1, 1)
thickness = 3

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwixp")

[node name="AppearanceMenu" parent="." instance=ExtResource("2_7gb7c")]
visible = false
layout_mode = 1

[node name="ControlsMenu" parent="." instance=ExtResource("2_0g7yr")]
visible = false
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_tp0d4")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 20
columns = 2

[node name="VolumeLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Volume"
horizontal_alignment = 2

[node name="VolumeHSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="GraphicsLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Graphics"
horizontal_alignment = 2

[node name="GraphicsOptionButton" type="OptionButton" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = SubResource("Theme_nq3g0")
theme_override_font_sizes/font_size = 36
selected = 0
item_count = 2
popup/item_0/text = "Bad"
popup/item_1/text = "Still Bad"
popup/item_1/id = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Appearance"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SubViewPortContainer" type="SubViewportContainer" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer/VBoxContainer/SubViewPortContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(170, 100)
render_target_update_mode = 4

[node name="Worm" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer/VBoxContainer/SubViewPortContainer/SubViewport" instance=ExtResource("3_qrlsc")]
process_mode = 4
scale = Vector2(0.5, 0.5)

[node name="EditAppearanceButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Edit..."

[node name="ControlsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Controls..."

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_ai5tv")

[node name="BackButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Back"

[connection signal="item_selected" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/GraphicsOptionButton" to="." method="_on_graphics_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/VBoxContainer/EditAppearanceButton" to="." method="_on_edit_appearance_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
